src/css/custom.css
/**
 * Copyright (c) 2017-present, Facebook, Inc.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */

:root {
  --ifm-color-primary: #ffcb06;
  --ifm-color-primary-dark: #ebba00;
  --ifm-color-primary-darker: #deb000;
  --ifm-color-primary-darkest: #b79100;
  --ifm-color-primary-light: #ffd020;
  --ifm-color-primary-lighter: #ffd32d;
  --ifm-color-primary-lightest: #ffdb54;
  --ifm-navbar-search-input-color: var(--ifm-color-gray-900);
  --ifm-background-color: #fff;
  --ifm-footer-background-color: #2d3436 !important;
  --ifm-footer-title-color: #fff;
  --ifm-footer-link-color: #fff;
  --ifm-heading-font-weight: 600;
  --ifm-button-font-weight: 600;
  --ifm-font-weight-semibold: 500;
  --ifm-code-font-size: 90%;
  --ra-color-tip: var(--ifm-color-primary);
  --ra-color-text-dark: #000;
}

/* Dark mode overrides */
html[data-theme="dark"] {
  --ifm-color-emphasis-100: var(--ifm-color-gray-900);
  --ifm-color-emphasis-200: var(--ifm-color-gray-800);
  --ifm-color-emphasis-300: var(--ifm-color-gray-700);
  --ifm-color-emphasis-400: var(--ifm-color-gray-600);
  --ifm-color-emphasis-500: var(--ifm-color-gray-500);
  --ifm-color-emphasis-600: var(--ifm-color-gray-400);
  --ifm-color-emphasis-700: var(--ifm-color-gray-300);
  --ifm-color-emphasis-800: var(--ifm-color-gray-200);
  --ifm-color-emphasis-900: var(--ifm-color-gray-100);
  --ifm-background-color: #3b4446;
  --ifm-navbar-background-color: #2d3436;
  --ifm-background-surface-color: transparent !important;
  --ifm-background-surface-color: #1e2125;
  --ifm-footer-background-color: #2d3436 !important;
  --ifm-footer-link-color: #fff;
  --ifm-footer-title-color: #fff;

  --ifm-hover-overlay: rgba(255, 255, 255, 0.05);

  --ifm-menu-link-sublist-icon: url('data:image/svg+xml;utf8,<svg alt="Arrow" xmlns="http://www.w3.org/2000/svg" width="16px" height="16px" viewBox="0 0 24 24"><path fill="rgba(255,255,255,0.6)" d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"></path></svg>');

  --ifm-color-content-secondary: rgba(255, 255, 255, 1);

  /* Mardown color in dark mode */
  --ifm-color-gray-800: var(--ifm-color-gray-300);
}

/* Admonition overrides */
.admonition .admonition-content a,
.admonition .admonition-content p,
.admonition .admonition-heading h5 {
  color: var(--ifm-heading-color) !important;
}

/* Docs overrides */
.markdown p {
  color: var(--ifm-color-gray-800) !important;
}

blockquote {
  border-left: 10px solid var(--ifm-color-primary) !important;
  border-top: 1px solid var(--ifm-color-primary) !important;
}

/* Hero overrides */
.particles canvas {
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 0;
  top: 0;
  left: 0;
}

.button {
  z-index: 1;
}

.card {
  min-height: 350px;
  --ifm-global-shadow-lw: 0 0 0 0 !important;
}

/* Dropdown menu overrides */
.dropdown .dropdown__menu {
  min-width: 14rem !important;
}

/* Highlight code lines */
.docusaurus-highlight-code-line {
  background-color: rgb(72, 77, 91);
  display: block;
  margin: 0 calc(-1 * var(--ifm-pre-padding));
  padding: 0 var(--ifm-pre-padding);
}

.button--active--tab {
  background-color: var(--ifm-background-color) !important;
  color: var(--ifm-color-primary) !important;
  border-color: var(--ifm-color-primary) !important;
  border-width: medium !important;
  border-top: none !important;
  border-left: none !important;
  border-right: none !important;
}

:target:before {
  height: 105px !important;
  margin: -105px 0 0 !important;
}

@media (max-width: 380px) {
  .navbar__logo {
    height: auto !important;
  }
}

.footer {
  color: #fff !important;
}

section {
  border-bottom: 1px solid var(--ifm-hr-border-color);
}

.docusaurus-highlight-code-line {
  background-color: rgb(0, 0, 0, 0.1);
  display: block;
  margin: 0 calc(-1 * var(--ifm-pre-padding));
  padding: 0 var(--ifm-pre-padding);
}

html[data-theme="dark"] .docusaurus-highlight-code-line {
  background-color: rgba(197, 189, 189, 0.3);
}

